Fix small spacing issues on User and Event pages. Start layout for Profile page.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 .page-container {
-    padding-top: 60px;
+    padding-top: var(--navbar-height);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
