--- a/frontend/src/components/InfoBox/InfoBox.css
+++ b/frontend/src/components/InfoBox/InfoBox.css
@@ -6,6 +6,20 @@
     gap: var(--card-spacing);
 }
 
+.info-group {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.left {
+    flex: 2 1 0;
+}
+
+.right {
+    flex: 1 1 0;
+}
+
 .info-box {
     border: solid var(--color-primary) var(--box-border-weight);
     border-radius: var(--box-border-radius);
@@ -29,19 +43,4 @@
 
 .info-box li {
     list-style: none;
-}
-
-.info-group {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-}
-
-.left {
-    flex-grow: 4;
-}
-
-.right {
-    flex-grow: 0;
 }
