--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: var(--navbar-height);
     display: flex;
     justify-content: space-between;
     background-color: orange;
